refactor: organize karahuto generation

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,6 +284,8 @@
     "            {\n",
     "                \"lemma\": word,\n",
     "                \"ja\": combined_glosses.get(word, []),\n",
+    "                \"en\": [],\n",
+    "                \"ru\": [],\n",
     "                \"poses\": combined_part_of_speech.get(word, []),\n",
     "                \"frequency\": freq,\n",
     "            }\n",
@@ -294,8 +296,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extend by morphology"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for term in terms:\n",
+    "    if term[\"lemma\"].endswith(\"hci\"):\n",
+    "        if term[\"lemma\"].endswith(\"ahci\"):\n",
+    "            singular = term[\"lemma\"][:-3]\n",
+    "        else:\n",
+    "            singular = term[\"lemma\"][:-2]\n",
+    "\n",
+    "        if singular in terms_index and not term[\"ja\"]:\n",
+    "            term[\"ja\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"ja\"]\n",
+    "            term[\"en\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"en\"]\n",
+    "            term[\"ru\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"ru\"]\n",
+    "\n",
+    "        if singular in terms_index and not term[\"poses\"]:\n",
+    "            term[\"poses\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"poses\"]\n",
+    "\n",
+    "    if term[\"lemma\"] == \"hcihi\":\n",
+    "        if term[\"lemma\"].endswith(\"ahcihi\"):\n",
+    "            singular = term[\"lemma\"][:-4]\n",
+    "        else:\n",
+    "            singular = term[\"lemma\"][:-3]\n",
+    "\n",
+    "        if not term[\"poses\"]:\n",
+    "            term[\"poses\"] = [\"n\"]\n",
+    "\n",
+    "        if singular in terms_index and not term[\"ja\"]:\n",
+    "            term[\"ja\"] = [\n",
+    "                g + \"こと\"\n",
+    "                for g in next(t for t in terms if t[\"lemma\"] == singular)[\"ja\"]\n",
+    "                if g.startswith(\"n\")\n",
+    "            ]\n",
+    "            term[\"en\"] = [\n",
+    "                \"that \" + g\n",
+    "                for g in next(t for t in terms if t[\"lemma\"] == singular)[\"en\"]\n",
+    "                if g.startswith(\"n\")\n",
+    "            ]\n",
+    "            term[\"ru\"] = [\n",
+    "                \"то \" + g\n",
+    "                for g in next(t for t in terms if t[\"lemma\"] == singular)[\"ru\"]\n",
+    "                if g.startswith(\"n\")\n",
+    "            ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extend POS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -346,35 +410,6 @@
     "    poses: list[str]\n",
     "    notes: str\n",
     "    frequency: int\n",
-    "\n",
-    "for term in terms:\n",
-    "    if term[\"lemma\"].endswith(\"hci\"):\n",
-    "        if term[\"lemma\"].endswith(\"ahci\"):\n",
-    "            singular = term[\"lemma\"][:-3]\n",
-    "        else:\n",
-    "            singular = term[\"lemma\"][:-2]\n",
-    "\n",
-    "        if singular in terms_index and not term[\"ja\"]:\n",
-    "            term[\"ja\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"ja\"]\n",
-    "            term[\"en\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"en\"]\n",
-    "            term[\"ru\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"ru\"]\n",
-    "\n",
-    "        if singular in terms_index and not term[\"poses\"]:\n",
-    "            term[\"poses\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"poses\"]\n",
-    "\n",
-    "    if term[\"lemma\"] == \"hcihi\":\n",
-    "        if term[\"lemma\"].endswith(\"ahcihi\"):\n",
-    "            singular = term[\"lemma\"][:-4]\n",
-    "        else:\n",
-    "            singular = term[\"lemma\"][:-3]  \n",
-    "        \n",
-    "        if not term[\"poses\"]:\n",
-    "            term[\"poses\"] = [\"n\"]\n",
-    "\n",
-    "        if singular in terms_index and not term[\"ja\"]:\n",
-    "            term[\"ja\"] = [g + \"こと\" for g in next(t for t in terms if t[\"lemma\"] == singular)[\"ja\"] if g.startswith(\"n\") ]\n",
-    "            term[\"en\"] = [\"that \" + g for g in next(t for t in terms if t[\"lemma\"] == singular)[\"en\"] if g.startswith(\"n\") ]\n",
-    "            term[\"ru\"] = [\"то \" + g for g in next(t for t in terms if t[\"lemma\"] == singular)[\"ru\"] if g.startswith(\"n\") ]\n",
     "\n",
     "POS_TABLE = {\n",
     "    \"自動詞\": \"vt\",\n",
@@ -442,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +713,6 @@
       "{\"lemma\": \"asini\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"eneani\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"haa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
-      "{\"lemma\": \"manuy\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"ci=\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"v\", \"pfx\"], \"frequency\": 0},\n",
       "{\"lemma\": \"korohcipe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"uurah\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
@@ -2166,14 +2200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All terms: 2817\n",
+      "All terms: 2816\n",
       "All translated: 1225\n",
       "Translated only ja: 48\n"
      ]
@@ -2191,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
