--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,12 +566,15 @@
     "            t[\"ja\"] = t[\"ja\"] + term[\"ja\"]\n",
     "            t[\"en\"] = t.get(\"en\", []) + term[\"en\"]\n",
     "            t[\"ru\"] = t.get(\"ru\", []) + term[\"ru\"]\n",
-    "            t[\"frequency\"] = t.get(\"frequency\", 0) + term.get(\"frequency\", 0)"
+    "            t[\"frequency\"] = t.get(\"frequency\", 0) + term.get(\"frequency\", 0)\n",
+    "            t[\"poses\"] = t.get(\"poses\", []) + term.get(\"poses\", [])\n",
+    "            t[\"cognates\"] = t.get(\"cognates\", []) + term.get(\"cognates\", [])\n",
+    "            t[\"noncognates\"] = t.get(\"noncognates\", []) + term.get(\"noncognates\", [])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1559,6 @@
       "{\"lemma\": \"ruwe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"v\", \"n\"], \"frequency\": 0},\n",
       "{\"lemma\": \"taaa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"rankehci\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
-      "{\"lemma\": \"niikah\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"pisehe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"keepuci\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"putaha\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\"], \"frequency\": 0},\n",
@@ -2236,15 +2238,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All terms: 2780\n",
-      "All translated: 1229\n",
+      "All terms: 2781\n",
+      "All translated: 1231\n",
       "Translated only ja: 48\n"
      ]
     }
@@ -2261,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
