feat: add override for karahuto

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -630,6 +630,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# override\n",
+    "\n",
+    "with open(\"input/sakhalin/additional_override.json\") as f:\n",
+    "    additional_override = cast(list[Term], json.load(f))\n",
+    "\n",
+    "    for term in additional_override:\n",
+    "        t = next((t for t in terms if t[\"lemma\"] == term[\"lemma\"] and t[\"ja\"] == term[\"ja\"]), None)\n",
+    "        if t is None:\n",
+    "            print(f\"{term['lemma']} not found\")\n",
+    "            continue\n",
+    "\n",
+    "        for k, v in term.get(\"overwrite\", {}).items():\n",
+    "            t[k] = v\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -638,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +920,6 @@
       "{\"lemma\": \"orowonna\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"nakapuruaynu\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"iihi\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
-      "{\"lemma\": \"nospa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"huyoo\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"rewsi\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"uneno\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
@@ -1131,7 +1151,6 @@
       "{\"lemma\": \"eyee\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"otuyunpe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"hetaneya\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
-      "{\"lemma\": \"henpara\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"adv\"], \"frequency\": 0},\n",
       "{\"lemma\": \"go\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"seraroka\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"nure\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
@@ -1251,7 +1270,6 @@
       "{\"lemma\": \"orun\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"colloc\"], \"frequency\": 0},\n",
       "{\"lemma\": \"hoo\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"ayyee\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
-      "{\"lemma\": \"henpah\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"adv\"], \"frequency\": 0},\n",
       "{\"lemma\": \"ucakasno\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"otasan\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"woya\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
@@ -1668,7 +1686,6 @@
       "{\"lemma\": \"dobukiy\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"hakodate\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"ikasiw\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
-      "{\"lemma\": \"tekoro\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"potora\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"yki\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"yoponi\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
@@ -2238,15 +2255,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All terms: 2781\n",
-      "All translated: 1231\n",
+      "All terms: 2782\n",
+      "All translated: 1236\n",
       "Translated only ja: 48\n"
      ]
     }
@@ -2263,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
