feat: reduce karahuto data size by omitting

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,13 +658,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make the JSON slimmer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "terms = [{\n",
+    "    k: v\n",
+    "    for k, v in t.items()\n",
+    "    if v != []\n",
+    "} for t in terms]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"output/ff-ainu-karahuto-terms-with-corpus.json\", \"w\") as f:\n",
-    "    json.dump(terms, f, ensure_ascii=False)"
+    "    json.dump(terms, f, ensure_ascii=False)\n"
    ]
   },
   {
@@ -676,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -2280,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
