feat: update corpus

--- a/corpus/create_tokenized_corpus.ipynb
+++ b/corpus/create_tokenized_corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8b57cdf05094b5696a32620fd018561",
+       "model_id": "7c27fa7a04ed401ab3884096c89f3baa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
+       "README.md:   0%|          | 0.00/1.71k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -31,12 +31,54 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66cbc6ede2824fe5b4b7cbd863c5a192",
+       "model_id": "79dfb3203e0e4c14ab49c9e7e4dbc0d1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Generating test split: 0 examples [00:00, ? examples/s]"
+       "train-00000-of-00001.parquet:   0%|          | 0.00/14.0M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d23452ee331b4858a7ed6d28dd3ffe5b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "test-00000-of-00001.parquet:   0%|          | 0.00/1.56M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ada6c1af8ab14000a9115acb328751e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/159241 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4299fd6c225a4f708775e8ed1afc1f6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/17694 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -52,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['アイヌ語鵡川方言日本語‐アイヌ語辞典', 'アイヌ語アーカイブ', 'アイヌタイムズ', '平取町アイヌ口承文芸', 'アイヌ語アーカイブ音声資料', 'AA研アイヌ語資料', '浅井タケ昔話全集I,II', '石狩川のアイヌ語（中級）', 'アイヌ語會話字典', 'アイヌ語口承文芸コーパス', '石狩川のアイヌ語（初級）', '十勝のアイヌ語（初級）', 'アイヌ語ラジオ講座テキスト', 'アイヌ民族文化センター研究紀要', 'アイヌ語音声資料', '十勝のアイヌ語（中級）', '沙流のアイヌ語（初級）', 'カラフトのアイヌ語（中級）', '美幌のアイヌ語（初級）', '鍋沢元蔵筆録ノート', 'アコㇿイタㇰ', '千徳太郎治のピウスツキ宛書簡', '沙流のアイヌ語（中級）', 'カムイユカㇻを聞いてアイヌ語を学ぶ', 'ニューエクスプレスプラス アイヌ語', '萱野茂の国会演説', 'アイヌ神謡集', '幌別のアイヌ語（初級）', '幌別のアイヌ語（中級）', 'ちとせのアイヌご（入門）', '千歳のアイヌ語（初級）', '静内のアイヌ語（初級）', '静内のアイヌ語（中級）', 'プラハ宣言', '美幌のアイヌ語（中級）', 'びほろのあいぬご（入門）', 'ほろべつのアイヌご（入門）', 'カラフトのアイヌ語（初級）', '千歳のアイヌ語（中級）', 'さるのアイヌご（入門）', 'しずないのアイヌご（入門）', 'いしかりがわのアイヌご（入門）', 'ウポポイ館内展示', 'ニューエクスプレス・スペシャル 日本語の隣人たち I+II', 'とかちのアイヌご（入門）', 'からふとのアイヌご（入門）', '第27回アイヌ語弁論大会', 'ピウスツキ記念碑'])"
+       "dict_keys(['アイヌ語アーカイブ', 'アイヌ語アーカイブ音声資料', 'アイヌ民族文化センター研究紀要', 'アイヌ神謡集', 'アイヌ語鵡川方言日本語‐アイヌ語辞典', '平取町アイヌ口承文芸', 'アイヌタイムズ', 'AA研アイヌ語資料', 'アイヌ語口承文芸コーパス', 'アイヌ語會話字典', '鍋沢元蔵筆録ノート', 'しずないのアイヌご（入門）', 'カムイユカㇻを聞いてアイヌ語を学ぶ', '浅井タケ昔話全集I,II', '北海道立アイヌ民族文化研究センター紀要', 'アイヌ語・アイヌ文化研究の課題', '幌別のアイヌ語（中級）', 'アイヌ語音声資料', '千歳のアイヌ語（中級）', '千徳太郎治のピウスツキ宛書簡', 'からふとのアイヌご（入門）', '石狩川のアイヌ語（中級）', '十勝のアイヌ語（中級）', '沙流のアイヌ語（中級）', 'アイヌ口承文芸テキスト集', '美幌のアイヌ語（中級）', 'いしかりがわのアイヌご（入門）', '千歳のアイヌ語（初級）', '幌別のアイヌ語（初級）', '十勝のアイヌ語（初級）', 'ニューエクスプレスプラス アイヌ語', 'アイヌ語ラジオ講座テキスト', '白沢ナベと小田イトの会話', 'びほろのあいぬご（入門）', 'カラフトのアイヌ語（初級）', 'アイヌ語復興に関わる諸問題', 'とかちのアイヌご（入門）', '第27回アイヌ語弁論大会', 'アコㇿイタㇰ', '美幌のアイヌ語（初級）', 'プラハ宣言', 'さるのアイヌご（入門）', 'ほろべつのアイヌご（入門）', '石狩川のアイヌ語（初級）', '沙流のアイヌ語（初級）', 'カラフトのアイヌ語（中級）', 'ウポポイ館内展示', '静内のアイヌ語（中級）', '静内のアイヌ語（初級）', 'ニューエクスプレス・スペシャル 日本語の隣人たち I+II', '萱野茂の国会演説', 'ちとせのアイヌご（入門）', 'ピウスツキ記念碑'])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "174585\n"
+      "176935\n"
      ]
     }
    ],
@@ -135,13 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sentence:  ponno ne kusu ci=koykokanu wa un=kore yan.\n",
+      "translation:  少しですので、私のアイヌ語にお耳を傾けてくださいますようお願い申し上げる次第です。\n",
+      "words:  ['ponno', 'ne', 'kusu', 'ci=', 'koykokanu', 'wa', 'un=', 'kore', 'yan']\n",
+      "part of speech:  [[], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], ['verb', 'prefix'], [], ['parti'], ['prefix'], ['verb'], ['parti']]\n",
+      "----------------------------------------------------------------------------------------------------\n",
       "sentence:  ne hi or ta nispa utar ku=koramkor hi ene oka hi aynumosir un aynu utar ka koeturenno sisam mosir ta oka aynu ka ene ne yakka aynu néno aynuitak ani ukoytak pa wa ratci oka apunno oka kuni kosanniyo wa un=kore yan\n",
       "translation:  そこで、私が先生方にお願いしたいということは、北海道にいるアイヌたち、それと一緒に、各地にいるアイヌたちがどのようにしたらアイヌ民族らしくアイヌ語で会話を交わし、静かに豊かに暮らしていけるかを先生方に考えてほしいと私は思い、\n",
       "words:  ['ne', 'hi', 'or', 'ta', 'nispa', 'utar', 'ku=', 'koramkor', 'hi', 'ene', 'oka', 'hi', 'aynumosir', 'un', 'aynu', 'utar', 'ka', 'koeturenno', 'sisam', 'mosir', 'ta', 'oka', 'aynu', 'ka', 'ene', 'ne', 'yakka', 'aynu', 'néno', 'aynuitak', 'ani', 'ukoytak', 'pa', 'wa', 'ratci', 'oka', 'apunno', 'oka', 'kuni', 'kosanniyo', 'wa', 'un=', 'kore', 'yan']\n",
@@ -152,55 +199,50 @@
       "words:  ['teeta', 'anakne', 'aynumosir', 'mosir', 'so', 'ka', 'ta', 'aynu', 'patek', 'an', 'hi', 'ta', 'anakne', 'uwepeker', 'koraci', 'sinne', 'yuk', 'ne', 'ciki', 'sípe', 'ne', 'ciki', 'nep', 'pakno', 'oka', 'p', 'ne', 'kusu', 'nep', 'a=', 'e', 'rusuy', 'nep', 'a=', 'konrusuy', 'somo', 'ki', 'no', 'aynu', 'patek', 'oka', 'hi', 'ne', 'a', 'korka', 'ne', 'usike', 'un', 'sísam', 'ne', 'manu', 'p', 'upas', 'horutke', 'ekannayukar', 'ek', 'pa', 'ruwe', 'ne']\n",
       "part of speech:  [['noun'], ['parti'], [], ['noun'], ['parti', 'noun'], ['parti', 'noun'], ['verb', 'parti'], ['noun'], ['adv'], ['verb', 'root', 'parti'], ['noun'], ['verb', 'parti'], ['parti'], ['noun'], ['adv'], [], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], [], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['suffix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], ['noun'], ['verb', 'prefix'], ['verb', 'interj', 'root'], ['parti'], ['noun'], ['verb', 'prefix'], [], ['adv'], ['verb'], ['colloc', 'suffix'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['verb', 'auxverb'], ['parti'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['verb', 'parti'], [], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['suffix'], ['noun'], [], [], ['verb'], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['verb', 'noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  utcike kuni p raka sak pe ku=ne p ne kusu teetakur néno aynuitak ku=ye enitan pe somo ne korka tananto anakne sisammosir un nispa utar katkemat utar an uske ta aynuitak ene an pe ne hi ene a=ye p hi ci=koykokanu ku=ki rusuy kusu aynuitak itak pirka p k=eutukanke wa ku=ye hawe ne.\n",
-      "translation:  意気地のない者、至らない者、私なので、昔のアイヌのようにアイヌの言葉を上手には言えないけれども、きょうのこの日は、日本国の国会議員の諸先生方がおられる所に、アイヌ語というものがどのようなものか、どのような言い方をするものかお聞き願いたいと私は考え、アイヌ語を私はここで言わせていただいたのであります。\n",
-      "words:  ['utcike', 'kuni', 'p', 'raka', 'sak', 'pe', 'ku=', 'ne', 'p', 'ne', 'kusu', 'teetakur', 'néno', 'aynuitak', 'ku=', 'ye', 'enitan', 'pe', 'somo', 'ne', 'korka', 'tananto', 'anakne', 'sisammosir', 'un', 'nispa', 'utar', 'katkemat', 'utar', 'an', 'uske', 'ta', 'aynuitak', 'ene', 'an', 'pe', 'ne', 'hi', 'ene', 'a=', 'ye', 'p', 'hi', 'ci=', 'koykokanu', 'ku=', 'ki', 'rusuy', 'kusu', 'aynuitak', 'itak', 'pirka', 'p', 'k=', 'eutukanke', 'wa', 'ku=', 'ye', 'hawe', 'ne']\n",
-      "part of speech:  [[], ['noun'], ['suffix'], [], ['noun'], ['noun'], ['prefix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['suffix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], [], [], [], ['prefix'], ['verb', 'noun'], [], ['noun'], ['adv'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], [], ['parti'], [], ['verb', 'parti'], ['noun'], ['noun'], ['noun'], ['noun'], ['verb', 'root', 'parti'], ['noun'], ['verb', 'parti'], [], ['adv'], ['verb', 'root', 'parti'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['noun'], ['adv'], ['verb', 'prefix'], ['verb', 'noun'], ['suffix'], ['noun'], ['verb', 'prefix'], [], ['prefix'], ['verb'], ['parti'], ['adv', 'parti'], [], ['verb', 'noun'], ['verb', 'adv'], ['suffix'], [], [], ['parti'], ['prefix'], ['verb', 'noun'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
+      "sentence:  heino　u kor turesi\n",
+      "translation:  の妹が\n",
+      "words:  ['heino', 'u', 'kor', 'turesi']\n",
+      "part of speech:  [[], [], ['verb', 'parti'], ['noun']]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  ue[y]hopunpa\n",
-      "translation:  一斉に湧き上がる。\n",
-      "words:  ['ue[y]hopunpa']\n",
-      "part of speech:  [[]]\n",
+      "sentence:  iyonnuppa ye a ye a\n",
+      "translation:  告げ口して何度も言って\n",
+      "words:  ['iyonnuppa', 'ye', 'a', 'ye', 'a']\n",
+      "part of speech:  [[], ['verb', 'noun'], ['verb', 'auxverb'], ['verb', 'noun'], ['verb', 'auxverb']]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  aynu nispa rayke kuni ramu kor ci... set kar wa\n",
-      "translation:  人間の旦那を殺そうという気持ちを持って、巣を作って\n",
-      "words:  ['aynu', 'nispa', 'rayke', 'kuni', 'ramu', 'kor', 'ci', 'set', 'kar', 'wa']\n",
-      "part of speech:  [['noun'], ['noun'], ['verb'], ['noun'], ['verb', 'noun'], ['verb', 'parti'], ['verb'], [], ['verb'], ['parti']]\n",
+      "sentence:  paye=an ayne\n",
+      "translation:  行くうちに\n",
+      "words:  ['paye', '=an', 'ayne']\n",
+      "part of speech:  [['verb'], ['verb', 'suffix'], ['adv']]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  utari inne\n",
-      "translation:  人が多く\n",
-      "words:  ['utari', 'inne']\n",
-      "part of speech:  [['noun'], ['verb']]\n",
+      "sentence:  soyne=an akusu nani nea ekimne ru kari ekimun si... hoyupu=an rusuy wa\n",
+      "translation:  私が外に出てみると、すぐその山へ続く道から、山の方へ私は走りたくて\n",
+      "words:  ['soyne', '=an', 'akusu', 'nani', 'nea', 'ekimne', 'ru', 'kari', 'ekimun', 'si', 'hoyupu', '=an', 'rusuy', 'wa']\n",
+      "part of speech:  [['verb'], ['verb', 'suffix'], ['conj'], ['adv'], ['adnom'], ['adv', 'verb'], ['noun'], [], [], ['root', 'noun'], ['verb'], ['verb', 'suffix'], ['parti'], ['parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  kanna suy ukopokor=an hi ta anakne pirka\n",
-      "translation:  再び子を授かるときには良い\n",
-      "words:  ['kanna', 'suy', 'ukopokor', '=an', 'hi', 'ta', 'anakne', 'pirka']\n",
-      "part of speech:  [['adv', 'adnom'], ['adv'], [], ['verb', 'suffix'], ['noun'], ['verb', 'parti'], ['parti'], ['verb', 'adv']]\n",
+      "sentence:  rewsi uci... un... cise or pakno poka paye=an wa inkanrusuy=’an kus,\n",
+      "translation:  泊まり小屋のところまででも行って様子を見たいと思ったので、\n",
+      "words:  ['rewsi', 'uci', 'un', 'cise', 'or', 'pakno', 'poka', 'paye', '=an', 'wa', 'inkanrusuy', '=’an', 'kus']\n",
+      "part of speech:  [[], [], ['verb', 'parti'], ['noun'], ['noun'], ['adv'], ['parti'], ['verb'], ['verb', 'suffix'], ['parti'], [], [], ['verb']]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  sikiru kuni p a=ne pa ruwe ne na.\n",
-      "translation:  神の国へ）向かうものであるからな。\n",
-      "words:  ['sikiru', 'kuni', 'p', 'a=', 'ne', 'pa', 'ruwe', 'ne', 'na']\n",
-      "part of speech:  [['verb'], ['noun'], ['suffix'], ['verb', 'prefix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['verb', 'noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'interj', 'parti']]\n",
+      "sentence:  tu aynu oka hine\n",
+      "translation:  二人の人間がいて\n",
+      "words:  ['tu', 'aynu', 'oka', 'hine']\n",
+      "part of speech:  [['num'], ['noun'], ['verb', 'pron', 'noun'], ['conj', 'parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  cikupeni inunpesauspe a=ne wa\n",
-      "translation:  イヌネンジュの木の炉縁の作業台が私で\n",
-      "words:  ['cikupeni', 'inunpesauspe', 'a=', 'ne', 'wa']\n",
-      "part of speech:  [[], [], ['verb', 'prefix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti']]\n",
+      "sentence:  Neun poka neun poka ku=sapaha ku=noynoye kor ku=ye kor k=an\n",
+      "translation:  なんとか私は頭をひねりながら話しています\n",
+      "words:  ['neun', 'poka', 'neun', 'poka', 'ku=', 'sapaha', 'ku=', 'noynoye', 'kor', 'ku=', 'ye', 'kor', 'k=', 'an']\n",
+      "part of speech:  [['adv'], ['parti'], ['adv'], ['parti'], ['prefix'], ['noun'], ['prefix'], [], ['verb', 'parti'], ['prefix'], ['verb', 'noun'], ['verb', 'parti'], [], ['verb', 'root', 'parti']]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "sentence:  Siraoi wano basu k=o wa Tomakomai ta ku=ran.\n",
+      "translation:  私は白老からバスに乗って苫小牧で下りました\n",
+      "words:  ['siraoi', 'wano', 'basu', 'k=', 'o', 'wa', 'tomakomai', 'ta', 'ku=', 'ran']\n",
+      "part of speech:  [[], ['parti'], [], [], ['verb'], ['parti'], [], ['verb', 'parti'], ['prefix'], ['verb']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  E=sini ka somo ki no e=arikiki siri?\n",
       "translation:  あなたは休みもしないで働いていたのですか？\n",
-      "words:  ['e=', 'sini', 'ka', 'somo', 'ki', 'no', 'e=', 'arikiki', 'siri?']\n",
-      "part of speech:  [['prefix'], [], ['parti', 'noun'], ['adv'], ['verb'], ['colloc', 'suffix'], ['prefix'], ['verb'], []]\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  Tane ci=ye kusu ne.\n",
-      "translation:  今私たちが言います\n",
-      "words:  ['tane', 'ci=', 'ye', 'kusu', 'ne']\n",
-      "part of speech:  [['adv', 'noun'], ['verb', 'prefix'], ['verb', 'noun'], ['adv', 'parti'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "sentence:  Pirka cise poronno roski wa oka.\n",
-      "translation:  美しい家がたくさん建っています\n",
-      "words:  ['pirka', 'cise', 'poronno', 'roski', 'wa', 'oka']\n",
-      "part of speech:  [['verb', 'adv'], ['noun'], ['adv'], ['verb'], ['parti'], ['verb', 'pron', 'noun']]\n",
+      "words:  ['e=', 'sini', 'ka', 'somo', 'ki', 'no', 'e=', 'arikiki', 'siri']\n",
+      "part of speech:  [['prefix'], [], ['parti', 'noun'], ['adv'], ['verb'], ['colloc', 'suffix'], ['prefix'], ['verb'], ['noun']]\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
@@ -221,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
