feat: skip empty words in tommy

--- a/dictionary/tommy1949/00_extract_words.ipynb
+++ b/dictionary/tommy1949/00_extract_words.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,14 @@
     "        \"etymology\": (tr.xpath(\"./td[3]/text()\").get() or '').strip(),\n",
     "        \"explanation\": (tr.xpath(\"./td[4]/text()\").get() or '').strip(),\n",
     "    }\n",
+    "    if not item[\"lemma\"]:\n",
+    "        continue\n",
     "    extracted_rows.append(item)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
