refactor: rename wiktionary to wiktionary-dump-extractor

--- a/dictionary/jawikt/extract_words.ipynb
+++ b/dictionary/jawikt/extract_words.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
    ],
    "source": [
     "import tempfile\n",
-    "import wiktionary\n",
+    "import wiktionary_dump_extractor\n",
     "import bz2\n",
     "import requests\n",
     "\n",
@@ -264,13 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "234f3ddcfdd44c2b9d9274775463e369",
+       "model_id": "80a396a1463a4e3b8b33d9ca08c0a403",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,6 +325,34 @@
     "    )\n",
     "\n",
     "    # print(entry[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77db78bca4434f52aed9316136e5bdf6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2318 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# find ?\n",
+    "for entry in tqdm(iterable=wiktionary_ainu_entries):\n",
+    "    text = entry[\"text\"]\n",
+    "    if \"{{etym}}\" in text or \"語源\" in text:\n",
+    "        print(text)\n"
    ]
   }
  ],
